--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h2>Добро пожаловать!</h2>
     <p>Культурология — это наука, изучающая культуру как особую систему ценностей, норм и смыслов, созданных человечеством.</p>
     <p>На нашем сайте вы узнаете об истории культуры, искусстве, традициях и духовных основах разных народов.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/Sistine_Chapel_ceiling_left.jpg/800px-Sistine_Chapel_ceiling_left.jpg" alt="Культура и искусство">
+    <img src="kult" alt="Культура и искусство">
   </main>
 
   <footer>
